requisitions report connected to Database

--- a/ui/requisitions_report/manifest.json
+++ b/ui/requisitions_report/manifest.json
@@ -65,7 +65,7 @@
 					"bundleName": "requisitions_report.i18n.i18n"
 				}
 			},
-			"ui": {
+			"uim": {
                 "type": "sap.ui.model.json.JSONModel",
                 "uri": "localService/requisitions.json"
             }
