--- a/ui/common/messagebundle.properties
+++ b/ui/common/messagebundle.properties
@@ -7,9 +7,18 @@ location=Location
 language=Language
 keyWords=Keywords
 descr=Description
+priorLow=Low
+priorHigh=High
+priorMedium=Medium
 
 #Skills
 skillName=Skill Name
 weight=Weight
 Skill=Skill
-Weight=Weight
+Weight=Weight 
+skills=Skills
+
+#Comments
+comments=Comments
+commIdCall=Call
+commIdNote=Note
