--- a/ui/manage_vacancy/manifest.json
+++ b/ui/manage_vacancy/manifest.json
@@ -72,6 +72,12 @@
 				"type": "sap.ui.model.json.JSONModel",
 				"dataSource": "requis",
 				"preload": true
+			},
+			"i18nCom": {
+				"type": "sap.ui.model.resource.ResourceModel",
+				"settings": {
+					"bundleName": "iacube.ui.common.messagebundle"
+				}
 			}
 		},
 		"resources": {
