--- a/ui/common/messagebundle.properties
+++ b/ui/common/messagebundle.properties
@@ -7,9 +7,6 @@ location=Location
 language=Language
 keyWords=Keywords
 descr=Description
-priorLow=Low
-priorHigh=High
-priorMedium=Medium
 
 #Skills
 skillName=Skill Name
@@ -22,3 +19,11 @@ skills=Skills
 comments=Comments
 commIdCall=Call
 commIdNote=Note
+
+#Priority Codes
+priorH=High
+priorL=Low
+priorMA=Major
+priorVH=Very High
+priorN=Normal
+priorMI=Minor
