--- a/ui/common/messagebundle.properties
+++ b/ui/common/messagebundle.properties
@@ -22,3 +22,12 @@ skills=Skills
 comments=Comments
 commIdCall=Call
 commIdNote=Note
+
+#Candidates Page
+
+cand.infoform.name=Имя кандидата
+cand.infoform.industry=Индустрия
+cand.infoform.language=Язык
+cand.infoform.location=Местоположение
+cand.infoform.website=Сайт
+cand.infoform.description=Описание
