--- a/ui/common/messagebundle.properties
+++ b/ui/common/messagebundle.properties
@@ -34,3 +34,5 @@ cand.infoform.language=Язык
 cand.infoform.location=Местоположение
 cand.infoform.website=Сайт
 cand.infoform.description=Описание
+
+cand.skillsform.name=Навыки
