--- a/ui/common/messagebundle.properties
+++ b/ui/common/messagebundle.properties
@@ -36,3 +36,6 @@ cand.infoform.website=Сайт
 cand.infoform.description=Описание
 
 cand.skillsform.name=Навыки
+
+profiles.list.popover.title=Профили
+profiles.list.popover.found=У {0} были найдены следующие профили
