--- a/ui/common/messagebundle.properties
+++ b/ui/common/messagebundle.properties
@@ -35,4 +35,10 @@ cand.infoform.location=Местоположение
 cand.infoform.website=Сайт
 cand.infoform.description=Описание
 
+
 cand.skillsform.name=Навыки
+
+profiles.list.popover.title=Профили
+profiles.list.popover.found=У {0} были найдены следующие профили
+
+candidates.list.popover.title=Присвоенная заявка
