--- a/ui/common/messagebundle.properties
+++ b/ui/common/messagebundle.properties
@@ -42,3 +42,4 @@ profiles.list.popover.title=Профили
 profiles.list.popover.found=У {0} были найдены следующие профили
 
 candidates.list.popover.title=Присвоенная заявка
+conflict=Конфликт
