--- a/ui/manage_vacancy/manifest.json
+++ b/ui/manage_vacancy/manifest.json
@@ -93,7 +93,8 @@
 				"viewType": "XML",
 				"controlAggregation": "detailPages",
 				"clearAggregation": false,
-				"controlId": "splitvac"
+				"controlId": "splitvac",
+				"async": true
 			},
 			"routes": [
 				{
