changes for fiori lauchpad

--- a/ui/manage_vacancy/manifest.json
+++ b/ui/manage_vacancy/manifest.json
@@ -41,6 +41,15 @@
 		]
 	},
 	"sap.ui5": {
+		"config": {
+			"sapFiori2Adaptation": {
+                  "style": true,       
+                  "collapse": false,   
+                  "title": true,       
+                  "back": false,       
+                  "hierarchy": false   
+            }
+		},
 		"rootView": {
 			"viewName": "manage_vacancy.view.SplitApp",
 			"type": "XML"
